--- a/config/db_connection_config.yaml
+++ b/config/db_connection_config.yaml
@@ -1,5 +1,5 @@
 #driver: 'ODBC Driver 17 for SQL Server'
-server: 'localhost\SQLEXPRESS'
+server: 'localhost'
 database: TRN
 username: RF_user
 password: rfuser2000
